hoan thanh 80% btvn buoi 31 chưa xu ly dduuoc tran eidt chuyen hiên thị voi id riêng, ghi de va luu lai

--- a/public/html/add-form.html
+++ b/public/html/add-form.html
@@ -40,18 +40,32 @@
       <h1 class="text-center">Thêm mới học viên</h1>
 
       <div class="form-frame mt-5">
-        <!-- name -->
-        <div class="row mb-3">
-          <label for="name" class="col-sm-3 col-form-label">Họ tên
+         <!-- first-name Tên -->
+         <div class="row mb-3">
+          <label for="name" class="col-sm-3 col-form-label">Tên
             <span class="text-danger">*</span>
           </label>
 
           <div class="col-sm-9">
-            <input type="text" class="form-control" id="name" autocomplete="nope">
+            <input type="text" class="form-control" id="first-name" autocomplete="nope">
             <small class="error-mess">Error message - báo lỗi </small>
           </div>
 
         </div>
+
+        <!-- last-name -->
+        <div class="row mb-3">
+          <label for="name" class="col-sm-3 col-form-label">Họ đệm
+            <span class="text-danger">*</span>
+          </label>
+
+          <div class="col-sm-9">
+            <input type="text" class="form-control" id="last-name" autocomplete="nope">
+            <small class="error-mess">Error message - báo lỗi </small>
+          </div>
+
+        </div>
+
         <!-- ngày sinh -->
         <div class="row mb-3">
           <label for="birthday" class="col-sm-3 col-form-label">Ngày sinh</label>
@@ -61,6 +75,7 @@
           </div>
 
         </div>
+        
         <!--  -->
         <div class="row mb-3">
 
