--- a/public/index.html
+++ b/public/index.html
@@ -147,26 +147,31 @@
 </body>
 
 </html>
+<!-- 
+<tr>
+    <th>${users[i].lastName}</th>
+    <th>${user.firstName}</th>
 
-<!-- <tr>
-    <th scope="row">${user.firstName} ${user.lastName}</th>
-    <td>${user.birthday || "Chưa có thông tin"}</td>
-    <td>${user.email}</td>
-    <td>${user.phone}</td>
-    <td class="text-center td-edit">
-        <a href="./html/edit.html?id=${user.id}" class="btn-edit link-success text-decoration-none px-1">
+    <td>${users[i].birthday}</td>
+    <td>${users[i].email}</td>
+    <td>${users[i].phone}</td>
+
+    <td class="text-center td-edit-btn">
+
+        <a href="./html/edit-form.html?id=${user.id}" style="color: #01A4B6;"
+            class="btn-open-edit-modal   text-decoration-none px-1">
             <i class="fas fa-edit"></i>
             <span>Chỉnh sửa</span>
         </a>
-        <a href="#" 
-        class="btn-remove-${user.id}  link-danger text-decoration-none px-1" 
 
-        onclick="removeUser(${user.id})"
-
-        data-bs-toggle="modal" data-bs-target="#removeUserModal"
-        >
+        <a onclick="removeUser('${users[i].id}')" href="#" class="btn-remove link-danger text-decoration-none px-1"
+            data-bs-toggle="modal" data-bs-target="#removeModal">
             <i class="fas fa-trash-alt"></i>
             <span>Xóa</span>
         </a>
     </td>
+
+</tr>
+</a>
+</td>
 </tr> -->
