làm btvn buoi 32 web API ve css Phan trang, tìm kiem, loc

--- a/public/html/add-form.html
+++ b/public/html/add-form.html
@@ -142,6 +142,8 @@
   <!-- File js -->
   <!-- Tệp js thêm học sinh -->
   <script src="../js/add-info.js"></script>
+  <script src="../js/validateInput.js"></script>
+
 
   
 
