--- a/public/html/edit-form.html
+++ b/public/html/edit-form.html
@@ -126,15 +126,12 @@
 
 
 
-
-
-
-
-
   <!-- Thư viện Jquery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- File Js -->
   <script src="../js/edit-infor.js"></script>
+  <script src="../js/validateInput.js"></script>
+
 </body>
 
 </html>
