làm btvn buoi 32 web API ve css Phan trang, tìm kiem, loc

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                 <span for="name" class="col-sm-3 col-form-label">Tìm kiếm </span>
                 <input type="text" class="">
                 <div class="btn-filter-data-student  btn btn-primary button-filter">
-                    <i class="fas fa-filter"></i>
+                    <i class="fas fa-search"></i>
                 </div>
             </div>
 
