làm btvn buoi 32 web API ve css Phan trang, tìm kiem, loc

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
                 <span>Thêm học viên</span>
             </a>
 
-            <div>
+            <!-- <div>
                 <input type="text" class="">
 
                 <div class="btn-filter-data-student  btn btn-primary button-filter">
@@ -55,14 +55,17 @@
                     <span>Lọc</span>
                 </div>
 
-            </div>
+            </div> -->
 
             <div>
                 <span for="name" class="col-sm-3 col-form-label">Tìm kiếm </span>
-                <input type="text" class="">
-                <div class="btn-filter-data-student  btn btn-primary button-filter">
+
+                <input type="text" class="input-search">
+
+                <div class="btn-search-data-student  btn btn-primary button-filter">
                     <i class="fas fa-search"></i>
                 </div>
+
             </div>
 
         </div>
@@ -132,7 +135,10 @@
 
             </ul>
 
-        </nav> <!-- pagination -->
+        </nav> 
+        
+        
+        <!-- pagination -->
 
 
     </div> <!-- container TABLE -->
