sua gan xong chuc nang chinh mua sam do an react

--- a/public/index.html
+++ b/public/index.html
@@ -58,9 +58,7 @@
             </div> -->
 
             <div>
-                <span for="name" class="col-sm-3 col-form-label">Tìm kiếm </span>
-
-                <input type="text" class="input-search">
+                <input type="text" class="input-search" placeholder=" Tìm kiếm">
 
                 <div class="btn-search-data-student  btn btn-primary button-filter">
                     <i class="fas fa-search"></i>
